--- a/ELE.Principal/.classpath
+++ b/ELE.Principal/.classpath
@@ -16,5 +16,6 @@
 			<attribute name="owner.project.facets" value="jst.utility"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/Coomeva Copia/ELE.Principal/lib/hibernate3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
