--- a/ELE.Principal/config.files/parametros.properties
+++ b/ELE.Principal/config.files/parametros.properties
@@ -354,7 +354,8 @@ codigo.tipo.parametro.fecha.eleccion.representantes =12
 ##########################################################
 # Parametro para fechas de registro novedades habilidad  #
 ##########################################################
-codigo.tipo.parametro.fecha.registro.novedades.habilidad =13
+codigo.tipo.parametro.fecha.registro.novedades.habilidad = 17
+codigo.parametro.fecha.registro.novedades.habilidad = 48
 codigo.tipo.parametro.lista.correos.notificacion.cambio.habilidad =14
 ##########################################################
 # Parametro para ruta de reportes de habilidad 		     #
