--- a/ELE.Principal/config.files/parametros.properties
+++ b/ELE.Principal/config.files/parametros.properties
@@ -351,11 +351,21 @@ param.tipo.elecciones.representantes=representantes
 #	Parametro para la fecha de elección representantes 	 #
 ##########################################################
 codigo.tipo.parametro.fecha.eleccion.representantes =12
+
+
+
 ##########################################################
 # Parametro para fechas de registro novedades habilidad  #
 ##########################################################
-codigo.tipo.parametro.fecha.registro.novedades.habilidad = 17
+codigo.tipo.parametro.fecha.registro.novedades.habilidad = 13
+
 codigo.parametro.fecha.registro.novedades.habilidad = 48
+
+codigo.parametro.fecha.inicial.registro.novedades.habilidad = 35
+codigo.parametro.fecha.final.registro.novedades.habilidad = 36
+
+
+
 codigo.tipo.parametro.lista.correos.notificacion.cambio.habilidad =14
 ##########################################################
 # Parametro para ruta de reportes de habilidad 		     #
