--- a/ELE.Principal/.classpath
+++ b/ELE.Principal/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="config.files"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry exported="true" kind="lib" path="lib/iText-2.1.4.jar"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/ELE.accesoDatos"/>
 	<classpathentry exported="true" kind="lib" path="lib/coomeva-utilidades-1.0.0.jar" sourcepath="C:/Users/jdmo4672/.m2/repository/co/com/coomeva/utilidades/coomeva-utilidades/1.0.0/coomeva-utilidades-1.0.0-sources.jar"/>
@@ -17,5 +16,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/hibernate3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_45"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
