--- a/co.com.coomeva.utilidades/.classpath
+++ b/co.com.coomeva.utilidades/.classpath
@@ -7,7 +7,6 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry exported="true" kind="lib" path="lib/poi-3.5-beta3-20080926.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/poi-contrib-3.5-beta3-20080926.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/poi-jdk14-3.5-beta3-20080926.jar"/>
@@ -30,5 +29,6 @@
 			<attribute name="owner.project.facets" value="jst.utility"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_45"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
