--- a/ELE.web/.classpath
+++ b/ELE.web/.classpath
@@ -89,8 +89,8 @@
 	<classpathentry exported="true" kind="lib" path="WebRoot/WEB-INF/lib/xmlParserAPIs-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebRoot/WEB-INF/lib/XmlSchema-1.4.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebRoot/WEB-INF/lib/coomeva-utilidades-1.1.2.jar"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/ELEclienteWSEmpleados"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_45"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/JBoss 4.2 Runtime"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ELEclienteWSEmpleados"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
