Se modifica logica de generacion de reporte de novedades aplicadas, se cambia columna <fecha corte> por <regional> en el reporte final, se modifica la consulta respectiva en la clase delegada.

--- a/ELE.web/WebRoot/WEB-INF/web.xml
+++ b/ELE.web/WebRoot/WEB-INF/web.xml
@@ -45,15 +45,16 @@
 <!-- 
 	<listener>
 		<listener-class>
-			co.com.coomeva.util.resources.log4j.AppContextListener</listener-class>
-	</listener>
--->
+			co.com.coomeva.util.resources.log4j.AppContextListener
+		</listener-class>
+	</listener>-->
+<!--  -->
 	
 	<listener>
 		<listener-class>
 			com.icesoft.faces.util.event.servlet.ContextEventRepeater
 		</listener-class>
-	</listener>
+	</listener>-->
 	
 
 
