avance modificacion de reportes de novedades

--- a/ELE.web/WebRoot/WEB-INF/classes/co/com/coomeva/ele/etiquetas/etiquetas.properties
+++ b/ELE.web/WebRoot/WEB-INF/classes/co/com/coomeva/ele/etiquetas/etiquetas.properties
@@ -102,6 +102,7 @@ ttlInicioSesion = Inicio Sesión
 msgConfirmarRep = ¿El proceso de generación se demora unos minutos, desea continuar?
 lblMedioVotacion = Medio de Votación
 lblZona = Zona Electoral
+lblZonaRegional = Zona Regional
 lblOficina = Oficina
 lblEstadoAsociado = Estado Habilidad Actual
 lblConsultar = Consultar
