--- a/ELE.Principal/src/co/com/coomeva/ele/logica/mensajes/mensajesLogica.properties
+++ b/ELE.Principal/src/co/com/coomeva/ele/logica/mensajes/mensajesLogica.properties
@@ -30,6 +30,7 @@ consulta.regionales=Error consultando las regionales.
 consulta.zonas.electorales=Error consultando todas las zonas electorales
 consulta.informacion.resumen.novedades=Error consultando la informaciond de novedades
 consulta.numero.novedades=Error consultando el n\u00FAmero de novedades por tipo y fecha del \u00FAltimo proceso ejecutado.
+consulta.regional.zona=Error consultando la Regional de cada Zona del \u00FAltimo proceso ejecutado.
 consulta.informacion.cabeza.plancha=Error consultando la informaci\u00F3n de la cabeza de plancha
 campo.obligatorio.empresa.actual=El campo Empresa Actual es obligatorio
 campo.obligatorio.cargo.actual=El campo Cargo es obligatorio
