se modifican las consultas respectivas para generar adecuadamente el reporte Resumen de Habilidad

--- a/ELE.web/WebRoot/WEB-INF/web.xml
+++ b/ELE.web/WebRoot/WEB-INF/web.xml
@@ -54,7 +54,7 @@
 		<listener-class>
 			com.icesoft.faces.util.event.servlet.ContextEventRepeater
 		</listener-class>
-	</listener>-->
+	</listener>
 	
 
 
