--- a/ELE.Principal/bin/parametros.properties
+++ b/ELE.Principal/bin/parametros.properties
@@ -233,6 +233,7 @@ selectLabelDefault	=[-seleccionar-]
 encabezado_reporte_excel_delegados_zona = Regional, Zona Elec., H\u00E1biles, Delegados, Del. Directos, Fracci\u00F3n, Del. Residuo, Dis. Restantes, Total 
 
 COD_PARAM_URL_WS_PM = http://profile.coomeva.com.co/WsProfile/services/Caas?wsdl
+COD_PARAM_URL_WS_PM_VS2 = https://secure.coomeva.com.co/pasaporte-Autenticacion-1/rest/
 COD_PARAM_NOMBRE_APLICACION = Elecciones
 COD_PARAM_FUENTE_DA = 0
 COD_PARAM_FUENTE_LDAP =1
