--- a/ELE.web/.classpath
+++ b/ELE.web/.classpath
@@ -92,5 +92,11 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_45"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/JBoss 4.2 Runtime"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ELEclienteWSEmpleados"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/log4j.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/javax.ws.rs.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/collections.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/ugli-commons-1.8.2.4.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/nio_char.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
