--- a/ELE.web/WebRoot/WEB-INF/web.xml
+++ b/ELE.web/WebRoot/WEB-INF/web.xml
@@ -42,20 +42,11 @@
 		<url-pattern>/gui/planchas/*</url-pattern>
 	</filter-mapping>
 
-<!-- 
-	<listener>
-		<listener-class>
-			co.com.coomeva.util.resources.log4j.AppContextListener
-		</listener-class>
-	</listener>-->
-<!--  -->
-	
-	<listener>
-		<listener-class>
-			com.icesoft.faces.util.event.servlet.ContextEventRepeater
-		</listener-class>
-	</listener>-->
-	
+	<!-- <listener> <listener-class> co.com.coomeva.util.resources.log4j.AppContextListener 
+		</listener-class> </listener> -->
+	<!-- <listener> <listener-class> com.icesoft.faces.util.event.servlet.ContextEventRepeater 
+		</listener-class> </listener> -->
+
 
 
 	<servlet>
