:gem: se agrega validación de caracteres especiales en autenticación de usuarios. :gem: se modifica web.xml para fijar HttpOnly en cookies de inicio de sesion.

--- a/ELE.Principal/bin/mensajes.properties
+++ b/ELE.Principal/bin/mensajes.properties
@@ -25,8 +25,9 @@ noUsuarioNoClave = Contraseña incorrecta, por favor inténtelo de nuevo. Quedan #
 usuarioBloqueado = El usuario se encuentra Bloqueado por realizar tres intentos segudos de ingresar sin exito, por Favor Comuníquese con el administrador del sistema Ext. 31100
 noNumeroLong = Señor usuario el campo ingresado no es un número entero
 noNumeroDouble = Señor usuario el campo ingresado no es un número con punto flotante
-noPassword = Señor usuario debe ingresar el Password.
-noUsuario = Para ingresar debe digitrar el nombre de usuario.
+noPassword = Por favor digite su contrase\u00F1a, Campo requerido.
+noUsuario = Para acceder al sistema debe digitar el nombre de usuario, Campo requerido.
+usuarioInvalido = El nombre de usuario no debe contener caracteres especiales.
 noUsuarioDA = El usuario no está registrado en el directorio activo
 noEstadoAsociado = No se ha ingresado el Estado al cual el asociado se desea cambiar
 noConcepto = No se ha ingresado el concepto de cambio de estado del Asociado
