--- a/ELE.web/WebRoot/WEB-INF/web.xml
+++ b/ELE.web/WebRoot/WEB-INF/web.xml
@@ -52,8 +52,10 @@
 
 	<!-- <listener> <listener-class> co.com.coomeva.util.resources.log4j.AppContextListener 
 		</listener-class> </listener> -->
-	<!-- <listener> <listener-class> com.icesoft.faces.util.event.servlet.ContextEventRepeater 
-		</listener-class> </listener> -->
+	 <listener>
+	<listener-class>
+		com.icesoft.faces.util.event.servlet.ContextEventRepeater</listener-class>
+</listener> 
 
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
