--- a/ELE.Principal/config.files/mensajes.properties
+++ b/ELE.Principal/config.files/mensajes.properties
@@ -94,6 +94,7 @@ noCheckPlacha = Señor usuario por favor seleccione al menos una plancha
 noImagen = Señor usuario debes Ingresar una imagen para seguir con el proceso de verificación
 noRepNuPlanchas = Señor usuario no se pueden repetir números de plancha
 vldAsociadoMayor3 = El Asociado no Tiene una Antigüedad Mayor a Tres Años.
+vldAsociadoFechaObtencionTitulo = Estimado asociado, usted no cumple con la antiguedad de 3 años de acreditacion de estudios como profesional, tecnico, tecnologo o acreditacion de oficio, para asprirar a ser Delegado de la Asamblea General Cooperativa.
 vldZonaValida = El Asociado no pertenece a una zona Valida para el proceso de Eleccion de Juntas Zonales.
 vldAsociadoInactivo = El Asociado se encuentra inactivo.
 vldAsoHab = El Asociado se encuentra Inhábil por conceptos Financieros.
