Ajuste de registro planchas al imprimir reporte.

--- a/ELE.Principal/bin/mensajes.properties
+++ b/ELE.Principal/bin/mensajes.properties
@@ -144,12 +144,12 @@ noHabil2 =Actualmente no se encuentra habilitado para la inscripci\u00F3n de pla
 msgErrorCargaArchivosExternos=Se ha presentado un error en el procesamiento del archivo. La carga de datos no se ha realizado con \u00E9xito. 
 msgErrorExtensionArchivo=El archivo tiene una extensi\u00F3n no permitida. Por favor cargar un archivo en formato TXT.
 ##msgInicioRegistroPlancha = El siguiente formulario debe ser diligenciado en su totalidad.
-msgInicioRegistroPlancha = Apreciado Asociado, recuerde que este formato Inscripción de plancha deberá ser diligenciado en su totalidad por alguno de los integrantes miembros principales con el fin de poder completar el proceso de inscripción
+msgInicioRegistroPlancha = Apreciado Asociado, recuerde que este formato Inscripci\u00F3n de plancha deber\u00E1 ser diligenciado en su totalidad por alguno de los integrantes miembros principales con el fin de poder completar el proceso de inscripci\u00F3n.
 msgAsociadoInhabilRegistroPlancha =El n\u00FAmero de documento {0} no corresponde a un asociado h\u00E1bil.
 msgErrorNullPointerException = Se ha presentado un error no controlado.  Por favor comuniquese con el administrador del sistema
 #msgErrorAsociadoPerteneceOtraPlancha =Estimado Asociado, recuerde que un Asociado no puede estar inscrito en más de una Plancha y el asociado con número de cédula {0} ya se encuentra registrado en otra plancha.
 #msgErrorAsociadoPerteneceOtraPlancha = Estimado Asociado, en  el Proceso de Elección de Representantes a Juntas Zonales, ningún asociado podrá pertenecer a más de una plancha, según lo establecido en el Art. 27 numeral 2 de la Resolución 357 del Consejo de Administración
-msgErrorAsociadoPerteneceOtraPlancha = Estimado Asociado, recuerde que un Asociado puede estar inscrito en una sola plancha y usted ya se encuentra registrado en una
+msgErrorAsociadoPerteneceOtraPlancha = Estimado Asociado, recuerde que un Asociado puede estar inscrito en una sola plancha y usted ya se encuentra registrado en una.
 msgErrorNoSePermitenPlanchasMixtas = Estimado Asociado,  recuerde que no se admite la conformaci\u00F3n de Planchas Mixtas.  El asociado con n\u00FAmero de documento {0} que intenta ingresar es empleado, promotor o corredor del grupo Coomeva.
 #msgErrorNoSePermitenPlanchasEmpleados = Estimado asociado,  recuerde que no se admite la conformaci\u00F3n de Planchas integradas por empleados. El asociado con n\u00FAmero de documento {0} que intenta ingresar es empleado, promotor o corredor del grupo Coomeva.
 msgErrorNoSePermitenPlanchasEmpleados = Estimado Asociado, los empleados de Coomeva no pueden ser elegidos en el proceso de Elección de Representantes a Juntas Zonales, según lo establecido en el Art. 18 Parágrafo 3 de la Resolución 357 del Consejo de Administración
