mejoras de reporte de cuociente :pill: Se corrige generacion de reporte de rechazo :zap:´Se modifica la libreria de consulta a la tabla de regionales .

--- a/ELE.web/WebRoot/WEB-INF/classes/co/com/coomeva/ele/etiquetas/etiquetas.properties
+++ b/ELE.web/WebRoot/WEB-INF/classes/co/com/coomeva/ele/etiquetas/etiquetas.properties
@@ -516,7 +516,7 @@ lbldisionTribunalCO-FT-459 = Resolución que deniega recurso de reposición y no c
 lbldisionTribunalCO-FT-460 = Resolución que resuelve recurso de reposición en contra y remite apelación
 lbldisionTribunalCO-FT-461 = Resolución que resuelve un recurso de apelación favorable
 lbldisionTribunalCO-FT-462 = Resolución que resuelve un recurso de Apelación en contra
-lbldisionTribunalCO-FT-753 =Resoluci\u00F3n que resuelve recursos interpuestos extermporaneamente
+lbldisionTribunalCO-FT-753 =Resoluci\u00F3n que resuelve recursos interpuestos extemporaneamente
 lbldisionTribunalCO-FT-458 =Resoluci\u00F3n que resuelve recurso de reposici\u00F3n Favorablemente
 
 #Regional que se debe modificar su nombre
