--- a/ELE.web/src/co/com/coomeva/ele/etiquetas/etiquetas.properties
+++ b/ELE.web/src/co/com/coomeva/ele/etiquetas/etiquetas.properties
@@ -64,6 +64,9 @@ lblAntiguedadEmpresaActual = Antigüedad del Cargo Actual(Meses)
 lblFechaGrado = Fecha de Grado
 lblConfirmFechaGrado = Confirmar Fecha de Grado (aaaa/mm/dd)
 lblProfesion = Profesión/Ocupación
+lblCertificado=Certificados
+btnTitleCargarCerficicadoOcupacion=Cargar Certificado de Ocupaci\u00F3n.
+btnTitleDescargarCerficicadoOcupacion=Descargar Certificado de Ocupaci\u00F3n.
 lblLinkfoto = Subir/Cambiar Foto
 lblExpDirigencial = Experiencia Dirigencial
 lblBtnVerificar = Verificar
@@ -305,6 +308,7 @@ mnuCargarArchivoOtrasEntElect = Cargar Otras Ent. Electorales
 mnuCargarArchivoSancionados =Cargar Sancionados 5 A\u00F1os
 mensajeIngresoInfoCabezaPlancha=El asociado no se encuentra inscrito como cabeza de plancha o Suplente cabeza de plancha, diligencie el formato de Registro de Plancha y guarde e imprima la informaci\u00F3n. 
 mnuinfocabezaplancha=Registrar Informaci\u00F3n General de Asociado Cabeza de la Plancha
+mnuinfosuplentePlancha=Registrar Informaci\u00F3n General de Asociado Suplente de la Plancha
 lblMensajeInfoCabezaPlancha=Estimado asociado, recuerde que este formato deber\u00E1 ser diligenciado unicamente por el cabeza de plancha. Para dar por terminado el proceso de diligenciamiento del formulario, debe hacer clic sobre el bot\u00F3n Finalizar y enviar
 lblImprAdmision = Imprimir Resoluci\u00F3n Admisi\u00F3n
 txtImprAdmision =Estimado usuario\: Se realiz\u00F3 la admisi\u00F3n de la plancha. Por favor genere e imprima el formato de Expedici\u00F3n de Resoluci\u00F3n de Admisi\u00F3n
