--- a/ELE.web/.classpath
+++ b/ELE.web/.classpath
@@ -52,10 +52,6 @@
 	<classpathentry exported="true" kind="lib" path="WebRoot/WEB-INF/lib/iText-2.1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebRoot/WEB-INF/lib/iText-2.1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebRoot/WEB-INF/lib/jaas.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebRoot/WEB-INF/lib/jasperreports-3.7.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebRoot/WEB-INF/lib/jasperreports-chart-themes-3.7.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebRoot/WEB-INF/lib/jasperreports-extensions-3.5.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebRoot/WEB-INF/lib/jasperreports-fonts-3.7.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebRoot/WEB-INF/lib/jaxen-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebRoot/WEB-INF/lib/jaxrpc.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebRoot/WEB-INF/lib/jdbc2_0-stdext.jar"/>
@@ -98,5 +94,9 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/collections.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/ugli-commons-1.8.2.4.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/nio_char.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jasperreports-3.7.6.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jasperreports-chart-themes-3.7.6.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jasperreports-extensions-3.5.3.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jasperreports-fonts-3.7.6.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
