implementacion de descarga reporte 211

--- a/ELE.web/WebRoot/WEB-INF/classes/co/com/coomeva/ele/etiquetas/etiquetas.properties
+++ b/ELE.web/WebRoot/WEB-INF/classes/co/com/coomeva/ele/etiquetas/etiquetas.properties
@@ -540,3 +540,5 @@ lblResumenNovedades=Resumen de Novedades
 lblResumenHabilidades=Resumen de Habilidades
 lblNovedadesAplicadas=Novedades Aplicadas
 lblHabilidadAsociados=Habilidad de Asociados
+
+lblMenuEnviarRadicacion=Enviar Radicaci\u00F3n
