Se modifica la concatenación de la ruta en reporte 210 :zap:Cambio de parametro de fecha de antiguedad :zap: avance Enviar radicación

--- a/ELE.web/WebRoot/WEB-INF/classes/co/com/coomeva/ele/etiquetas/etiquetas.properties
+++ b/ELE.web/WebRoot/WEB-INF/classes/co/com/coomeva/ele/etiquetas/etiquetas.properties
@@ -542,3 +542,4 @@ lblNovedadesAplicadas=Novedades Aplicadas
 lblHabilidadAsociados=Habilidad de Asociados
 
 lblMenuEnviarRadicacion=Enviar Radicaci\u00F3n
+textInfoEnvioRadicacion=Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
