--- a/ELE.web/src/co/com/coomeva/ele/etiquetas/etiquetas.properties
+++ b/ELE.web/src/co/com/coomeva/ele/etiquetas/etiquetas.properties
@@ -542,3 +542,4 @@ lblNovedadesAplicadas=Novedades Aplicadas
 lblHabilidadAsociados=Habilidad de Asociados
 
 lblMenuEnviarRadicacion=Enviar Radicaci\u00F3n
+textInfoEnvioRadicacion=Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
