:dart: se adiciona logica de negocio para el proceso de Enviar radicación

--- a/ELE.web/WebRoot/WEB-INF/classes/co/com/coomeva/ele/etiquetas/etiquetas.properties
+++ b/ELE.web/WebRoot/WEB-INF/classes/co/com/coomeva/ele/etiquetas/etiquetas.properties
@@ -541,5 +541,14 @@ lblResumenHabilidades=Resumen de Habilidades
 lblNovedadesAplicadas=Novedades Aplicadas
 lblHabilidadAsociados=Habilidad de Asociados
 
+#************************************************
+# GTC CORPORATION - DANILO LÓPEZ SANDOVAL
+# PROPIEDADES PARA PROCESO DE ENVIO DE RADICACIÓN 
+# 31/10/2021
+#*************************************************
 lblMenuEnviarRadicacion=Enviar Radicaci\u00F3n
-textInfoEnvioRadicacion=Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
+textInfoEnvioRadicacion=Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+btnEnviarRadicacion=Enviar Radicaci\u00F3n
+lblDetallePendientes=Detalle de Pendientes
+lblTipoFirma=Firmar Plancha
+
