--- a/ELE.web/.classpath
+++ b/ELE.web/.classpath
@@ -86,7 +86,6 @@
 	<classpathentry exported="true" kind="lib" path="WebRoot/WEB-INF/lib/XmlSchema-1.4.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebRoot/WEB-INF/lib/coomeva-utilidades-1.1.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_45"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/JBoss 4.2 Runtime"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ELEclienteWSEmpleados"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/log4j.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/gson-2.3.1.jar"/>
@@ -98,5 +97,6 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jasperreports-chart-themes-3.7.6.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jasperreports-extensions-3.5.3.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jasperreports-fonts-3.7.6.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/JBoss 4.2 Runtime 2"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
