mejora enviar radicacion y ajuste a reportes

--- a/ELE.web/WebRoot/WEB-INF/classes/co/com/coomeva/ele/etiquetas/etiquetas.properties
+++ b/ELE.web/WebRoot/WEB-INF/classes/co/com/coomeva/ele/etiquetas/etiquetas.properties
@@ -547,7 +547,8 @@ lblHabilidadAsociados=Habilidad de Asociados
 # 31/10/2021
 #*************************************************
 lblMenuEnviarRadicacion=Enviar Radicaci\u00F3n
-textInfoEnvioRadicacion=Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+textInfoEnvioRadicacion=Señor asociado, para finalizar el proceso de Inscripci\u00F3n de Planchas es necesario definir el tipo de Firma de la Plancha que se ajuste a sus necesidades.
+txtFirmaRadicada=Señor asociado, su plancha se encuentra inscrita satisfactoriamente. Si tiene alguna duda con gusto la responderemos mediante los canales de informaci\u00F3n disponibles. 
 btnEnviarRadicacion=Enviar Radicaci\u00F3n
 lblDetallePendientes=Detalle de Pendientes
 lblTipoFirma=Firmar Plancha
