:zap: se modifica consulta zona electoral para incluir zona electoral especial :zap: se modifica inicio de sesion para permitir registrar asociados que poseen inhabilidades

--- a/ELE.Principal/bin/mensajes.properties
+++ b/ELE.Principal/bin/mensajes.properties
@@ -172,7 +172,8 @@ no.existe.cuociente.electoral				=No existe un cuociente electoral correspondien
 
 #msgErrorEmpleadoRetiradoMenos3Annos = Estimado Asociado,  el asociado {0} no cumple con lo establecido en el numeral 7 - Art\u00EDculo 20 de la resoluci\u00F3n No.341 del Consejo de Administraci\u00F3n.
 #msgErrorEmpleadoRetiradoMenos3Annos = Estimado Asociado, usted no cumple con lo establecido en el numeral b - Art\u00EDculo 18 de la resoluci\u00F3n No.357 del Consejo de Administraci\u00F3n.
-msgErrorEmpleadoRetiradoMenos3Annos = Estimado Asociado, usted no cumple con el tiempo de retiro de Coomeva o sus empresas como empleado o promotor de mínimo 3 años, para aspirar a ser Delegado de la Asamblea General de la Cooperativa
+#msgErrorEmpleadoRetiradoMenos3Annos = Estimado Asociado, usted no cumple con el tiempo de retiro de Coomeva o sus empresas como empleado o promotor de mínimo 3 años, para aspirar a ser Delegado de la Asamblea General de la Cooperativa
+msgErrorEmpleadoRetiradoMenos3Annos =Estimado Asociado, usted no cumple con el tiempo de retiro de m\u00EDnimo 3 años como empleado o promotor de Coomeva o una de alguna de sus empresas, para aspirar a ser Delegado de la Asamblea General de la Cooperativa
 
 campo.obligatorio.delegadoZona.periodoEelctoral = El periodo electoral es requerido para el cálculo de los delegados por Zona Electoral
 campo.obligatorio.delegadoZona.noCuociente		= No se encontró un cuociente electoral asociado al perioro electoral ingresado
@@ -244,6 +245,7 @@ msg.imposible.inadmitir.plancha.no.registrada =La plancha no se encuentra en est
 msg.error.imposible.generar.constancia.recibo.plancha.no.inscrita =No es posible generar la constancia de recibo para una plancha en estado diferente a inscrita
 msg.error.imposible.generar.constancia.recibo.plancha.no.registrada =No es posible generar la constancia de recibo para una plancha en estado diferente a registrada
 msgAsociadoNoHabilParaElegirSerElegido =El asociado no se encuentra h\u00E1bil por lo tanto no puede ser registrado como integrante de la plancha
+msgExcepcionAsociadoNoHabil =El asociado no se encuentra h\u00E1bil por lo tanto no puede ser registrado como integrante de la plancha
 ################
 # Mensajes de juegos medios visuales
 ################
