--- a/ELE.web/WebRoot/WEB-INF/classes/co/com/coomeva/ele/etiquetas/etiquetas.properties
+++ b/ELE.web/WebRoot/WEB-INF/classes/co/com/coomeva/ele/etiquetas/etiquetas.properties
@@ -552,4 +552,6 @@ txtFirmaRadicada=Señor asociado, su plancha se encuentra inscrita satisfactoriam
 btnEnviarRadicacion=Enviar Radicaci\u00F3n
 lblDetallePendientes=Detalle de Pendientes
 lblTipoFirma=Firmar Plancha
+confirmacionFirmaPresencial=Estimado asociado para finalizar su proceso de inscripci\u00F3n de planchas, deber\u00E1 descargar los formatos diligenciados y hacerlos firmar por cada uno de los integrantes de la plancha. estos documentos deben ser radicados ante la comision electoral en la oficina de coomeva definida para inscripci\u00F3n de planchas. consulte la oficina https://www.coomeva.com.co/elecciondelegados2022/
+confirmacionFirmaVirtual=Estimado asociado para finalizar su proceso de inscripci\u00F3n de plancha, deber\u00E1 firmar los formatos de manera electronica. pronto le llegar\u00E1 a cada integrante de la plancha un correo electronco para su respectiva firma. una vez realizado este proceso, la comision electoral proceder\u00E1 a generar el certificado de radicación y recibo.
 
