--- a/ELE.web/src/co/com/coomeva/ele/etiquetas/etiquetas.properties
+++ b/ELE.web/src/co/com/coomeva/ele/etiquetas/etiquetas.properties
@@ -60,7 +60,7 @@ lblDocSuplente = Miembro Suplente
 lblDocumento = Documento de identidad
 lblNombreAsociado = Nombres y Apellidos
 lblAntiguedad = Antigüedad en Coomeva (Meses)
-lblAntiguedadEmpresaActual = Antigüedad del Cargo Actual(Meses)
+lblAntiguedadEmpresaActual = Antigüedad del Cargo Actual(Años)
 lblFechaGrado = Fecha de Grado
 lblConfirmFechaGrado = Confirmar Fecha de Grado (aaaa/mm/dd)
 lblProfesion = Profesión/Ocupación
